# System-manageFood

./: .gitignore  CMakeCache.txt  CMakeLists.txt  InventarisMBG  Makefile  README.md  SYSTEM_DOCS.md  cmake_install.cmake  inventory.csv  test_algo
.cache/clangd/index/: Algorithms.cpp.9E7C63ED0C3B5F78.idx  Algorithms.h.89FD4C1060B31E78.idx  BahanMakanan.h.74BF257787CD90B1.idx  InventoryManager.cpp.9A7267173C2E9352.idx  InventoryManager.h.2C635EB7FD99D113.idx  LoginDialog.cpp.1CE5EA3964658789.idx  LoginDialog.h.2085404FBACB3D37.idx  MainWindow.cpp.7B837B962FA7AE1E.idx  MainWindow.h.6F16E7AC87C83B7D.idx  main.cpp.389A878FBFD4EF19.idx  test_algorithms.cpp.DDB98AC57F5A9100.idx
.github/workflows/: windows.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
InventarisMBG_autogen/: deps
InventarisMBG_autogen/BMPI5EA7AM/: moc_LoginDialog.cpp  moc_LoginDialog.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
include/core/: Algorithms.h  BahanMakanan.h  FinancialManager.h  InventoryManager.h  User.h  UserManager.h
include/gui/: LoginDialog.h  MainWindow.h
src/: main.cpp
src/core/: Algorithms.cpp  FinancialManager.cpp  InventoryManager.cpp  UserManager.cpp
src/gui/: LoginDialog.cpp  MainWindow.cpp
test_algo_autogen/: deps
tests/: test_algorithms.cpp
